--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                 <li><a href="#" data-section="services" class="nav-link"><i class="fas fa-briefcase-medical"></i>
                         الخدمات</a></li>
                 <li><a href="#" data-section="doctors" class="nav-link"><i class="fas fa-user-md"></i> الأطباء</a></li>
+                <li><a href="#" data-section="slots" class="nav-link"><i class="fas fa-clock"></i> المواعيد المتاحة</a>
+                </li>
                 <li><a href="#" data-section="settings" class="nav-link"><i class="fas fa-cog"></i> الإعدادات</a></li>
             </ul>
         </nav>
@@ -186,6 +188,47 @@
 
             <div class="services-grid" id="services-grid">
                 <div class="empty-state">جاري التحميل...</div>
+            </div>
+        </section>
+
+        <!-- Available Slots Section -->
+        <section id="slots" class="section">
+            <div class="section-header">
+                <h2><i class="fas fa-clock"></i> إدارة المواعيد المتاحة</h2>
+                <button class="btn btn-primary" onclick="openModal('slot-modal')">
+                    <i class="fas fa-plus"></i> إضافة موعد متاح
+                </button>
+            </div>
+
+            <div class="card">
+                <div class="table-header">
+                    <select id="slot-service-filter" class="select-input" onchange="loadSlots()">
+                        <option value="">جميع الخدمات</option>
+                    </select>
+                    <select id="slot-status-filter" class="select-input" onchange="loadSlots()">
+                        <option value="">جميع الحالات</option>
+                        <option value="false">متاح</option>
+                        <option value="true">محجوز</option>
+                    </select>
+                </div>
+                <div class="table-container">
+                    <table id="slots-table">
+                        <thead>
+                            <tr>
+                                <th>الخدمة</th>
+                                <th>التاريخ</th>
+                                <th>الوقت</th>
+                                <th>الحالة</th>
+                                <th>الإجراءات</th>
+                            </tr>
+                        </thead>
+                        <tbody id="slots-tbody">
+                            <tr>
+                                <td colspan="5" class="empty-state">جاري التحميل...</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </section>
 
@@ -396,6 +439,37 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" onclick="closeModal('doctor-modal')">إلغاء</button>
+                    <button type="submit" class="btn btn-primary"><i class="fas fa-save"></i> حفظ</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Slot Modal -->
+    <div id="slot-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3><i class="fas fa-clock"></i> <span id="slot-modal-title">إضافة موعد متاح</span></h3>
+                <button class="close-btn" onclick="closeModal('slot-modal')">&times;</button>
+            </div>
+            <form id="slot-form">
+                <input type="hidden" id="slot-id" />
+                <div class="form-group">
+                    <label for="slot-service">الخدمة *</label>
+                    <select id="slot-service" required></select>
+                </div>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label for="slot-date">التاريخ *</label>
+                        <input type="date" id="slot-date" required />
+                    </div>
+                    <div class="form-group">
+                        <label for="slot-time">الوقت *</label>
+                        <input type="time" id="slot-time" required />
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" onclick="closeModal('slot-modal')">إلغاء</button>
                     <button type="submit" class="btn btn-primary"><i class="fas fa-save"></i> حفظ</button>
                 </div>
             </form>
