--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                     <input type="text" id="service-name" required />
                 </div>
                 <div class="form-group">
-                    <label for="service-price">السعر (ريال) *</label>
+                    <label for="service-price">السعر (ج.م) *</label>
                     <input type="number" id="service-price" step="0.01" required />
                 </div>
                 <div class="form-group">
